@@ -1,0 +1,18 @@
+#ifndef _SANDIX_TYPES_H
+#define _SANDIX_TYPES_H
+
+#ifndef NULL
+#define NULL	((void *)0)
+#endif
+
+typedef unsigned int	__u32;
+typedef unsigned short	__u16;
+typedef unsigned char	__u8;
+typedef signed   int	__s32;
+typedef signed   short	__s16;
+typedef signed   char	__s8;
+
+typedef unsigned int	size_t;
+typedef unsigned int 	addr_t;
+
+#endif /* _SANDIX_TYPES_H*/
